# cmsdas-long-ex-top-xsec

./: .gitignore  .gitlab-ci.yml  README.md  config_documentation.md  pip_requirements.txt  processor_ttxs_dilep.py  setup.cfg
example/: condor_opts.txt  config_ttbarll.json  crosssections.json  environment.sh  example_config.hjson  example_histograms.json  example_processor.py  hist_config.json  nanoAOD_test_MuonEG.root  nanoAOD_test_TTTo2L2Nu.root  seed.txt  test_config.hjson
fit/: combine_config_dilep.hjson  export_for_combine.py  make_datacard.py  variable_rebin.py
inputs/: crosssections_13p6.hjson  hist_config.hjson  hist_config_btageff.hjson  hist_config_njet.hjson
pepper/: __init__.py  config.py  config_basic.py  config_ttbarll.py  datasets.py  executor.py  hdffile.py  hist_collection.py  hist_defns.py  htcondor.py  kinreco_betchart.py  kinreco_sonnenschein.py  misc.py  output_filler.py  plot.py  processor.py  processor_basic.py  processor_ttbarll.py  runproc.py  scale_factors.py  selector.py
scripts/: calculate_stitching_factors.py  compute_mc_lumifactors.py  compute_pileup_weights.py  convert_root_hists_split_sys.py  delete_duplicate_outputs.py  export_hists_from_state.py  generate_btag_efficiencies.py  generate_jet_puid_efficiencies.py  get_bad_local_files.py  hdf5_to_ttree.py  merge_hists.py  plot_histograms.py  produce_met_xy_nums.py  rucio_create_rules.py  ttbarll_dy_sf_calculate.py  ttbarll_dy_sf_produce.py  ttbarll_kinreco_hists_produce.py  ttbarll_select_events.py  ttbarll_trigger_sf_calculate.py  ttbarll_trigger_sf_produce.py
(+17 files in other folders)
