[metadata]
name = pepper
version = 1.0
description = ParticlE Physics ProcEssoR

[options]
packages = find:
install_requires =
    coffea >= 0.7.13,<= 0.7.21
    awkward >= 1.7.0
    dask_jobqueue >= 0.8.2
    bokeh !=3.0.*,>=2.4.2
    h5py
    hdf5plugin
    hist
    hjson
    correctionlib <= 2.2.2

[options.extras_require]
dev =
    pep8-naming

[flake8]
extend-ignore = N806

[mypy]
ignore_missing_imports = True
